# gigagochi

./: .gitignore  CALIBRATION_LAB_TZ.md  CHARACTER_COMMUNICATION_TZ.md  CREATURE_PHRASE_RAG_TZ.md  LITE_CHAT_MODE_TZ.md  LORE_MEMORY_TZ.md  MESSAGE_EXAMPLES_AGE_STYLE_TZ.md  MVP_SPEC.md  Makefile  POKEMON_TEMPLATE_PRESETS_TZ.md  README.md  SHELLDON_MEMORY_INTEGRATION_TZ.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  bot.py  config.py  db.py  dependencies.py  errors.py  main.py  middleware.py  models.py  public_media.py  schemas.py
backend/data/: 100_задач_для_путешественника_с_ответами.md  character_bible_template.json  interactive_travel_demo.json  llm_runtime.json  lore_runtime.json  media_runtime.json  speech_runtime.json  story_constructor.json  story_library.json  tone_runtime.json  travel_story_templates.json  задачи_путешественника_без_расчётов.md  задачи_путешественника_до_6_класса.md  задачи_путешественника_до_6_класса_backup_до_рефакторинга.md
backend/scripts/: analyze_calibration_votes.py  backfill_interactive_travel_owners.py  check_dependency_lock.py  cleanup_story_feedback.py  ensure_volume_permissions.sh  evaluate_character_consistency.py  evaluate_full_story_models.py  evaluate_pet_dialogues.py  export_openapi.py  generate_provider_visual_comparison.py  import_external_character_sources.py  migrate_pet_character_foregrounds.py  migrate_pet_scene_video_preroll.py  remove_background.mjs  (+2 more)
(+478 files in other folders)
