[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tamagotchi-backend"
version = "0.1.0"
description = "Local FastAPI backend for AI Tamagotchi MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.0",
    "openai>=2.0.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.14.0",
]
litellm = [
    "litellm>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/prompts/pet_image_prompts.py" = ["E501"]
